moved scrolling to ul and changed padding

--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -38,3 +38,16 @@ $social-branding: (
     email: #2f2f2f,
     print: #2f2f2f
 );
+
+// ----------------------------------------------------------------------
+// Colors 
+// ----------------------------------------------------------------------
+$primary-text-color: #000;
+$secondary-background-color: #231F20;
+$secondary-text-color: #FFF;
+$secondary-border-color: #57584f;
+$tertiary-text-color: #57584f;
+$dark-gray-color: #57584F;
+$captions-background-color: #2F312B;
+$light-gray-color: #f7f7f7;
+$lighter-gray-color: #f2f2f2;
