--- a/_scss/elements/_headlines.scss
+++ b/_scss/elements/_headlines.scss
@@ -38,15 +38,14 @@
         
         span {
           @include opacity(0);
-          position: inherit;
-          right: -40px;
-          @include custom-transition(opacity .25s ease, right .25s ease);
+          margin-left: 40px;
+          @include custom-transition(opacity .25s ease, margin-left .25s ease);
         }
         
         &:hover, &:focus {
           span {
             @include opacity(1);
-            right: 0;
+            margin-left: 5px;
           }
         }
       }
