--- a/_includes/elements/nav.html
+++ b/_includes/elements/nav.html
@@ -4,5 +4,6 @@
         <li><a href="#">OPTION 2</a></li>
         <li><a href="#">OPTION 3</a></li>
         <li><a href="#">OPTION 4</a></li>
+        <li><a href="#">OPTION 5</a></li>
     </ul>
 </nav>
