--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -26,7 +26,7 @@
             <p class="large">DROP DOWN NAV</p>
         </div>
     </div>
-    {% include elements/dropdown-nav.html %}
+    {% include elements/nav-mobile-dropdown.html dropdown="true" %}
     <div class="container">
         <div class="inner-container">
             <div class="elem">
