--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     {% include elements/nav-mobile-dropdown.html dropdown="true" %}
-    <div class="container">
+    <div class="container no-bottom">
         <div class="inner-container">
             <div class="elem">
                 <h4>PARAGRAPH DEFAULTS</h4>
@@ -57,6 +57,10 @@
                 <h4>LEADERS</h4>
                 {% include elements/leaders.html %}
             </div>
+            <div class="elem">
+                <h4>Quotes</h4>
+            </div>
         </div>
     </div>
+    {% include elements/quotes.html %}
 </section>
