--- a/_scss/base/_custom-mixins.scss
+++ b/_scss/base/_custom-mixins.scss
@@ -10,4 +10,5 @@
 @import "custom-mixins/custom-filter";
 @import "custom-mixins/custom-linear-gradient";
 @import "custom-mixins/custom-mastheads";
+@import "custom-mixins/custom-repeating-gradient";
 @import "custom-mixins/custom-transition";
