label needed here

--- a/_scss/elements/_accordion.scss
+++ b/_scss/elements/_accordion.scss
@@ -103,9 +103,9 @@
       }
     }
     
-    > li input[type=checkbox]:checked ~ .plus-black { opacity: 0; }
+    > li input[type=checkbox]:checked ~ label .plus-black { opacity: 0; }
       
-    > li input[type=checkbox]:checked ~ .minus-black { opacity: 1; }
+    > li input[type=checkbox]:checked ~ label .minus-black { opacity: 1; }
       
     > li input[type=checkbox]:checked ~ label span {
       &:before { transform: rotate(90deg); }
