--- a/_scss/elements/_accordion.scss
+++ b/_scss/elements/_accordion.scss
@@ -5,9 +5,7 @@
 
 
 .accordion {
-  input[type=checkbox] {
-    display: none;
-  }
+  input[type=checkbox] { display: none; }
   
   > a {
     font: 600 1em/1.375em $font-family;
@@ -51,7 +49,6 @@
         font: 600 1.125em $font-family;
         padding: 28px 45px 23px 5px;
         position: relative;
-        text-decoration: none;
         text-transform: uppercase;
         top: 0;
         
