--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -63,4 +63,12 @@
         </div>
     </div>
     {% include elements/quotes.html %}
+    <div class="container">
+        <div class="inner-container">
+            <div class="elem">
+                <h4>Hot Topic Bar</h4>
+                {% include elements/hot-topic.html %}
+            </div>
+        </div>
+    </div>
 </section>
