--- a/css/style.scss
+++ b/css/style.scss
@@ -40,6 +40,7 @@
 @import "elements/dropdown-nav";
 @import "elements/leaders";
 @import "elements/quotes";
+@import "elements/notifications";
 
 //primary colors
 .white {
