--- a/_scss/elements/_nav.scss
+++ b/_scss/elements/_nav.scss
@@ -5,7 +5,7 @@ nav {
   position: relative;
   
   ul {
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     -webkit-user-select: none;
     -webkit-overflow-scrolling: touch;
