add playlist to globals, and slight tweak to nav.js

--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -57,6 +57,10 @@
                 <h4>LEADERS</h4>
                 {% include elements/leaders.html %}
             </div>
+            <div class="elem">
+                <h4>VIDEO PLAYLIST</h4>
+                {% include elements/playlist.html %}
+            </div>
         </div>
     </div>
 </section>
