--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,7 @@
 @import "elements/headlines";
 @import "elements/dropdown-nav";
 @import "elements/leaders";
+@import "elements/playlist";
 
 //primary colors
 .white {
