add photo slideshow element, and make JS work with multiple instances

--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -58,6 +58,10 @@
                 {% include elements/leaders.html %}
             </div>
             <div class="elem">
+                <h4>PHOTO SLIDESHOW</h4>
+                {% include elements/photo-slideshow.html %}
+            </div>
+            <div class="elem">
                 <h4>VIDEO PLAYLIST</h4>
                 {% include elements/playlist.html %}
             </div>
