create new custom select option

--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -46,6 +46,10 @@
                 {% include elements/accordion.html %}
             </div>
             <div class="elem">
+                <h4>SELECT OPTION</h4>
+                {% include elements/custom-select.html %}
+            </div>
+            <div class="elem">
                 <h4>NEWS</h4>
                 {% include elements/news.html %}
             </div>
