--- a/css/style.scss
+++ b/css/style.scss
@@ -37,6 +37,7 @@
 @import "elements/news";
 @import "elements/lists";
 @import "elements/accordion";
+@import "elements/custom-select";
 @import "elements/headlines";
 @import "elements/dropdown-nav";
 @import "elements/leaders";
