--- a/_scss/elements/_custom-select.scss
+++ b/_scss/elements/_custom-select.scss
@@ -1,7 +1,7 @@
 .custom-select {
   border: 1px solid map-get($army-branding, grey50);
   position: relative;
-  padding: 5px 55px 5px 5px;
+  padding: 5px 50px 5px 5px;
   @include box-sizing(content-box);
 
   select {
@@ -14,7 +14,7 @@
     border-width: 0 1px 0 0;
     font: 600 1.125em $font-family;
     height: 50px;
-    padding: 3px 0px 0 15px;
+    padding: 3px 10px 0 15px;
     text-transform: uppercase;
     width: 100%;
 
@@ -25,24 +25,10 @@
     option {
       font-family: "Arial";
       text-transform: none;
-
-      // &:hover {
-      //   @include custom-linear-gradient(map-get($army-branding, gold), map-get($army-branding, gold));
-      //   color: #000;
-      // }
-    }
-
-    ::-moz-selection { /* Code for Firefox */
-        background: linear-gradient(map-get($army-branding, gold), map-get($army-branding, gold));
-        color: #000;
-    }
-
-    ::selection {
-        background: linear-gradient(map-get($army-branding, gold), map-get($army-branding, gold));
-        color: #000;
     }
   }
 
+  // gold circle
   &::before {
     border-radius: 50%;
     content: "";
@@ -50,17 +36,18 @@
     height: 34px;
     margin-top: -17px;
     position: absolute;
-    right: 10px;
+    right: 8px;
     top: 50%;
     width: 34px;
   }
+  // down arrow
   &::after {
     background: transparent $social-button-sprite no-repeat scroll -169px -50px;
     content: "";
     height: 8px;
     margin-top: -4px;
     position: absolute;
-    right: 21px;
+    right: 19px;
     top: 50%;
     width: 11px;
   }
@@ -85,23 +72,27 @@
     }
     .custom-options {
       background-color: #ffffff;
-      left: 1%;
+      border: 1px solid map-get($army-branding, grey50);
+      left: -1px;
+      margin-top: 5px;
+      max-height: 275px;
+      overflow-x: hidden;
+      overflow-y: auto;
       position: absolute;
-      width: 98%;
+      width: 100%;
       z-index: 2;
+      @include box-sizing(content-box);
 
       &.show {
         display: block;
       }
 
       ul {
-        border: 1px solid;
-        padding: 5px;
-
         li {
-          border-bottom: 1px solid #cccccc;
-          padding: 8px 10px 5px;
+          border-bottom: 1px solid map-get($army-branding, grey30);
           cursor: pointer;
+          font-weight: 600;
+          padding: 11px 25px 8px;
 
           &:last-child {
             border-width: 0;
