update navs to use real SubNav class JS code

--- a/_includes/elements/nav-mobile-dropdown.html
+++ b/_includes/elements/nav-mobile-dropdown.html
@@ -1,8 +1,8 @@
 <nav{% if include.dropdown %} class="dropdown"{% endif %}>
-    <input type="checkbox" id="submenu-toggle{% if include.dropdown %}1{% endif %}">
-    <div class="submenu-container">
-        <div class="submenu-inner">
-            <label for="submenu-toggle{% if include.dropdown %}1{% endif %}">News Filters</label>
+    <input type="checkbox" id="subnav-toggle{% if include.dropdown %}1{% endif %}">
+    <div class="subnav-container">
+        <div class="subnav-inner">
+            <label for="subnav-toggle{% if include.dropdown %}1{% endif %}">News Filters</label>
             <ul class="container">
                 <li><a class="active" href="#">Option 1</a></li>
                 <li><a href="#">Option 2</a></li>
