--- a/_scss/elements/_custom-select.scss
+++ b/_scss/elements/_custom-select.scss
@@ -1,7 +1,7 @@
 .custom-select {
   border: 1px solid map-get($army-branding, grey50);
   position: relative;
-  padding: 5px 50px 5px 5px;
+  padding: 5px;
   @include box-sizing(content-box);
 
   select {
@@ -9,14 +9,17 @@
     -webkit-appearance: none;
     appearance: none;
     background-color: transparent;
+    @include custom-linear-gradient(to left, transparent 45px, map-get($army-branding, grey30) 1px, transparent 46px);
+    // background-image: linear-gradient(to left, transparent 45px, map-get($army-branding, grey30) 1px, transparent 46px);
     border-radius: 0;
-    border-right: 1px solid #ccc;
-    border-width: 0 1px 0 0;
+    // border-right: 1px solid #ccc;
+    border-width: 0;
     font: 600 1.125em $font-family;
     height: 50px;
-    padding: 3px 10px 0 15px;
-    text-transform: uppercase;
+    padding: 3px 56px 0 15px;
+    position: relative;
     width: 100%;
+    z-index: 1;
 
     &::-ms-expand { /* for IE 11 */
       display: none;
@@ -24,12 +27,14 @@
 
     option {
       font-family: "Arial";
+      padding: 8px;
       text-transform: none;
     }
   }
 
   // gold circle
   &::before {
+    background-color: map-get($army-branding, gold);
     border-radius: 50%;
     content: "";
     display: inline-block;
@@ -50,9 +55,6 @@
     right: 19px;
     top: 50%;
     width: 11px;
-  }
-  &:hover::before, &:focus::before {
-    background-color: map-get($army-branding, gold);
   }
   .custom-overlay,
   .custom-options {
@@ -83,10 +85,6 @@
       z-index: 2;
       @include box-sizing(content-box);
 
-      &.show {
-        display: block;
-      }
-
       ul {
         li {
           border-bottom: 1px solid map-get($army-branding, grey30);
@@ -102,6 +100,14 @@
             background-color: map-get($army-branding, gold);
           }
         }
+      }
+    }
+    &.show-options {
+      .custom-options {
+        display: block;
+      }
+      &::after {
+        background-position: -181px -50px;
       }
     }
   }
